fix issue with image overflow

--- a/src/editors/content/media/manager/ImageIcon.scss
+++ b/src/editors/content/media/manager/ImageIcon.scss
@@ -1,15 +1,6 @@
 .image-icon {
-  // width: 100px;
-  // height: 54px;
-  width: 100%;
-  height: 100%;
-  // line-height: 54px;
-  text-align: center;
-  overflow: hidden;
-
   img {
     max-width: 100%;
-    // max-height:100%;
     vertical-align: middle;
   }
 }
